[gd_scene load_steps=9 format=3 uid="uid://main_scene"]

[ext_resource type="PackedScene" uid="uid://player_scene" path="res://scenes/player.tscn" id="1_player"]
[ext_resource type="PackedScene" uid="uid://enemy_scene" path="res://scenes/enemy.tscn" id="2_enemy"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="3_manager"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.2, 0.4, 0.8, 1)
sky_horizon_color = Color(0.6, 0.7, 0.85, 1)
ground_bottom_color = Color(0.15, 0.12, 0.1, 1)
ground_horizon_color = Color(0.4, 0.35, 0.3, 1)

[sub_resource type="Sky" id="Sky_main"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_main")
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.45, 0.5, 1)
ambient_light_energy = 0.5
tonemap_mode = 2
ssao_enabled = true
ssil_enabled = true
glow_enabled = true
fog_enabled = false

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(100, 1, 100)

[sub_resource type="StandardMaterial3D" id="Material_floor"]
albedo_color = Color(0.3, 0.35, 0.3, 1)
roughness = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_wall"]
size = Vector3(20, 4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall"]
size = Vector3(20, 4, 1)

[sub_resource type="StandardMaterial3D" id="Material_wall"]
albedo_color = Color(0.5, 0.45, 0.4, 1)
roughness = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_crate"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_crate"]
size = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="Material_crate"]
albedo_color = Color(0.6, 0.4, 0.2, 1)
roughness = 0.9

[sub_resource type="NavigationMesh" id="NavigationMesh_arena"]
vertices = PackedVector3Array(-50, 0, -50, -50, 0, 50, 50, 0, 50, 50, 0, -50)
polygons = [PackedInt32Array(0, 1, 2, 3)]
agent_radius = 0.5
agent_height = 2.0

[node name="Main" type="Node3D"]
script = ExtResource("3_manager")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 20, 30, 20)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 1.2
shadow_enabled = true

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("Material_floor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_arena")

[node name="Wall1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -25)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall1"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("Material_wall")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall1"]
shape = SubResource("BoxShape3D_wall")

[node name="Wall2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 25)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall2"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("Material_wall")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall2"]
shape = SubResource("BoxShape3D_wall")

[node name="Wall3" type="StaticBody3D" parent="."]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -25, 2, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall3"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("Material_wall")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall3"]
shape = SubResource("BoxShape3D_wall")

[node name="Wall4" type="StaticBody3D" parent="."]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 25, 2, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall4"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("Material_wall")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall4"]
shape = SubResource("BoxShape3D_wall")

[node name="Crate1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 5)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Crate1"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("Material_crate")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Crate1"]
shape = SubResource("BoxShape3D_crate")

[node name="Crate2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1, -3)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Crate2"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("Material_crate")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Crate2"]
shape = SubResource("BoxShape3D_crate")

[node name="Crate3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 1, -10)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Crate3"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("Material_crate")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Crate3"]
shape = SubResource("BoxShape3D_crate")

[node name="Player" parent="." instance=ExtResource("1_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Enemies" type="Node3D" parent="."]

[node name="Enemy1" parent="Enemies" instance=ExtResource("2_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1, 15)

[node name="Enemy2" parent="Enemies" instance=ExtResource("2_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 1, 10)

[node name="Enemy3" parent="Enemies" instance=ExtResource("2_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -15)

[node name="Enemy4" parent="Enemies" instance=ExtResource("2_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 1, -12)

[node name="Enemy5" parent="Enemies" instance=ExtResource("2_enemy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 20)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Crosshair" type="ColorRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="HealthLabel" type="Label" parent="HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Health: 100"

[node name="AmmoLabel" type="Label" parent="HUD"]
offset_left = 20.0
offset_top = 55.0
offset_right = 200.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 24
text = "Ammo: 30 / 90"

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 2
text = "Score: 0"
